# 20250228_rust_engcon_workshop

./: .gitignore  README.md  book.toml
book_src/: 01_introduction.md  02_rust_intro.md  03_macro_lib_impl.md  SUMMARY.md
book_src/macro_lib/: 00_usecase.md  01_parsers.md  02_structure.md  03_core_idea.md  errors.md  modularization.md  outline.md  parse_trait.md  syn_and_quote.md
book_src/rust_intro/: 01_hello_rust.md  02_vars_and_datastructures.md  03_traits.md  04_derive_macros.md  05_attribute_macros.md  06_disclaimer.md
code/: Cargo.toml  output.json  tmp.rs
code/src/: 02_data.rs  03_trait.rs  04_derive.rs  05_tokio.rs  06_engcon.rs
