[package]
name = "hello_rust"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hello"
path = "src/01_hello.rs"

[[bin]]
name = "data"
path = "src/02_data.rs"

[[bin]]
name = "trait"
path = "src/03_trait.rs"

[[bin]]
name = "derive"
path = "src/04_derive.rs"

[[bin]]
name = "tokio"
path = "src/05_tokio.rs"

[[bin]]
name = "engcon"
path = "src/06_engcon.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1.43", features = ["full"] }
engcon = { version = "0.1", features = ["derive"] }
